# ScriptRAG

./: .env.example  .gitignore  AGENTIC_RAG_ADOPTION_ANALYSIS.md  ARCHITECTURE_REVIEW_DETAILED.md  CHANGELOG.md  CHUNKING_ANALYSIS_REPORT.md  COMPLETE_ENHANCEMENT_SUMMARY.md  CURRENT_PROJECT_STATUS.md  Dockerfile  EXECUTION_CHECKLIST.md  EXECUTION_SUMMARY.md  FAILED_TESTS_CHECKLIST.md  FINAL_PROJECT_SUMMARY.md  FINAL_SUMMARY.md  FINAL_TEST_ACHIEVEMENT_SUMMARY.md  FINAL_TEST_REPORT.md  FIX_SKILLS_COMPATIBILITY.md  FIX_THREAD_SAFETY.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_TEST_IMPROVEMENT_SUMMARY.md  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE1_QUICK_START.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_DOCUMENTATION_INDEX.md  PROJECT_REVIEW_REPORT.md  PROJECT_STRUCTURE.md  QUICK_FIX_CHECKLIST.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  RAG_SKILLS_TESTING_QUICK_START.md  README.md  RESUME_OPTIMIZED.md  RESUME_PROJECT_HIGHLIGHTS.md  REVIEW_SUMMARY.md  SETUP.md  SUMMARY_TASK3_AND_REFACTOR.md  (+52 more)
alembic/: MIGRATION_GUIDE.md  env.py
config/: llm_providers.example.yaml  skills.yaml
migrations/: 001_create_vector_schema.sql
monitoring/: README.md  alertmanager.yml  alerts.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml
scripts/: DATABASE_SETUP_SUMMARY.md  README_DATABASE.md  VERIFICATION_CHECKLIST.md  check_glm_config.py  create_core_tables.sql  create_functions.sql  create_log_tables.sql  create_vector_tables.sql  db_migrate.py  generate_saint_seiya_complete_knowledge.py  (+9 more)
(+279 files in other folders)
